// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`workers/repository/updates/generate > generateBranchConfig() > handles @types specially (reversed) 1`] = `
{
  "addLabels": [],
  "automerge": false,
  "branchName": "some-branch",
  "commitMessage": "",
  "constraints": {},
  "depName": "some-dep",
  "depTypes": undefined,
  "dependencyDashboardApproval": false,
  "dependencyDashboardPrApproval": false,
  "displayFrom": "",
  "displayPending": "",
  "displayTo": "0.6.0",
  "labels": [
    "a",
    "c",
    "b",
  ],
  "manager": "some-manager",
  "newValue": "0.6.0",
  "prBodyColumns": [],
  "prTitle": "some-title",
  "prettyDepType": "dependency",
  "recreateClosed": false,
  "releaseTimestamp": undefined,
  "skipInstalls": true,
  "upgrades": [
    {
      "branchName": "some-branch",
      "depName": "some-dep",
      "depTypes": undefined,
      "displayFrom": "",
      "displayPending": "",
      "displayTo": "0.6.0",
      "labels": [
        "a",
        "c",
      ],
      "manager": "some-manager",
      "newValue": "0.6.0",
      "prTitle": "some-title",
      "prettyDepType": "dependency",
      "recreateClosed": false,
    },
    {
      "branchName": "some-branch",
      "commitBodyTable": true,
      "datasource": "npm",
      "depName": "some-dep",
      "depTypes": undefined,
      "displayFrom": "",
      "displayPending": "",
      "displayTo": "1.0.0",
      "labels": [
        "a",
        "b",
      ],
      "manager": "some-manager",
      "newValue": "1.0.0",
      "prTitle": "some-other-title",
      "prettyDepType": "dependency",
      "recreateClosed": false,
    },
    {
      "branchName": "some-branch",
      "depName": "@types/some-dep",
      "depTypes": undefined,
      "displayFrom": "",
      "displayPending": "",
      "displayTo": "0.5.7",
      "labels": [
        "a",
      ],
      "manager": "some-manager",
      "newValue": "0.5.7",
      "prTitle": "some-title",
      "prettyDepType": "dependency",
      "recreateClosed": false,
    },
  ],
}
`;

exports[`workers/repository/updates/generate > generateBranchConfig() > handles @types specially 1`] = `
{
  "addLabels": [],
  "automerge": false,
  "branchName": "some-branch",
  "commitBodyTable": true,
  "commitMessage": "

| datasource | package         | from  | to    |
| ---------- | --------------- | ----- | ----- |
| npm        | @types/some-dep | 0.5.7 | 0.5.8 |
",
  "constraints": {},
  "datasource": "npm",
  "depName": "some-dep",
  "depTypes": undefined,
  "dependencyDashboardApproval": false,
  "dependencyDashboardPrApproval": false,
  "displayFrom": "",
  "displayPending": "",
  "displayTo": "0.6.0",
  "hasTypes": true,
  "isRange": false,
  "labels": [],
  "manager": "some-manager",
  "newValue": "0.6.0",
  "prBodyColumns": [],
  "prTitle": "some-title",
  "prettyDepType": "dependency",
  "recreateClosed": false,
  "releaseTimestamp": undefined,
  "skipInstalls": true,
  "upgrades": [
    {
      "branchName": "some-branch",
      "commitBodyTable": true,
      "datasource": "npm",
      "depName": "some-dep",
      "depTypes": undefined,
      "displayFrom": "",
      "displayPending": "",
      "displayTo": "0.6.0",
      "isRange": false,
      "manager": "some-manager",
      "newValue": "0.6.0",
      "prTitle": "some-title",
      "prettyDepType": "dependency",
      "recreateClosed": false,
    },
    {
      "branchName": "some-branch",
      "commitBodyTable": true,
      "datasource": "npm",
      "depName": "some-dep",
      "depTypes": undefined,
      "displayFrom": "",
      "displayPending": "",
      "displayTo": "1.0.0",
      "isRange": false,
      "manager": "some-manager",
      "newValue": "1.0.0",
      "prTitle": "some-other-title",
      "prettyDepType": "dependency",
      "recreateClosed": false,
    },
    {
      "branchName": "some-branch",
      "commitBodyTable": true,
      "currentValue": "0.5.7",
      "currentVersion": "0.5.7",
      "datasource": "npm",
      "depName": "@types/some-dep",
      "depTypes": undefined,
      "displayFrom": "0.5.7",
      "displayPending": "",
      "displayTo": "0.5.8",
      "isRange": false,
      "manager": "some-manager",
      "newValue": "0.5.8",
      "newVersion": "0.5.8",
      "prTitle": "some-title",
      "prettyDepType": "dependency",
      "prettyNewVersion": "v0.5.8",
      "recreateClosed": false,
    },
  ],
}
`;

exports[`workers/repository/updates/generate > generateBranchConfig() > handles lockFileMaintenance 1`] = `
{
  "addLabels": [],
  "automerge": false,
  "branchName": "some-branch",
  "commitMessage": "",
  "constraints": {},
  "depTypes": undefined,
  "dependencyDashboardApproval": false,
  "dependencyDashboardPrApproval": false,
  "displayFrom": "",
  "displayPending": "",
  "displayTo": "",
  "isLockFileMaintenance": true,
  "labels": [],
  "manager": "some-manager",
  "prBodyColumns": [],
  "prTitle": "some-title",
  "prettyDepType": "dependency",
  "recreateClosed": true,
  "releaseTimestamp": undefined,
  "skipInstalls": true,
  "upgrades": [
    {
      "branchName": "some-branch",
      "depTypes": undefined,
      "displayFrom": "",
      "displayPending": "",
      "displayTo": "",
      "isLockFileMaintenance": true,
      "manager": "some-manager",
      "prTitle": "some-title",
      "prettyDepType": "dependency",
      "recreateClosed": true,
    },
  ],
}
`;

exports[`workers/repository/updates/generate > generateBranchConfig() > handles lockFileUpdate 1`] = `
{
  "addLabels": [],
  "automerge": false,
  "branchName": "some-branch",
  "commitMessage": "",
  "constraints": {},
  "currentValue": "^1.0.0",
  "currentVersion": "1.0.0",
  "depTypes": undefined,
  "dependencyDashboardApproval": false,
  "dependencyDashboardPrApproval": false,
  "displayFrom": "1.0.0",
  "displayPending": "",
  "displayTo": "1.0.1",
  "isLockfileUpdate": true,
  "isRange": false,
  "labels": [],
  "lockedVersion": "1.0.0",
  "manager": "some-manager",
  "newValue": "^1.0.0",
  "newVersion": "1.0.1",
  "prBodyColumns": [],
  "prTitle": "some-title",
  "prettyDepType": "dependency",
  "prettyNewVersion": "v1.0.1",
  "recreateClosed": false,
  "releaseTimestamp": undefined,
  "skipInstalls": true,
  "upgrades": [
    {
      "branchName": "some-branch",
      "currentValue": "^1.0.0",
      "currentVersion": "1.0.0",
      "depTypes": undefined,
      "displayFrom": "1.0.0",
      "displayPending": "",
      "displayTo": "1.0.1",
      "isLockfileUpdate": true,
      "isRange": false,
      "lockedVersion": "1.0.0",
      "manager": "some-manager",
      "newValue": "^1.0.0",
      "newVersion": "1.0.1",
      "prTitle": "some-title",
      "prettyDepType": "dependency",
      "prettyNewVersion": "v1.0.1",
      "recreateClosed": false,
    },
  ],
}
`;
